// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Slider Component > renders with default value when no value is provided 1`] = `
<body>
  <div>
    <span
      aria-disabled="false"
      class="relative flex w-full touch-none select-none items-center"
      data-orientation="horizontal"
      data-testid="slider-test"
      dir="ltr"
      style="--radix-slider-thumb-transform: translateX(-50%);"
    >
      <span
        class="relative h-1.5 w-full grow overflow-hidden rounded-full bg-primary/20"
        data-orientation="horizontal"
      >
        <span
          class="absolute h-full bg-primary"
          data-orientation="horizontal"
          style="left: 0%; right: 100%;"
        />
      </span>
      <span
        style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(0% + 0px);"
      >
        <span
          aria-orientation="horizontal"
          aria-valuemax="100"
          aria-valuemin="0"
          aria-valuenow="0"
          class="block h-4 w-4 rounded-full border border-primary/50 bg-background shadow transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50"
          data-orientation="horizontal"
          data-radix-collection-item=""
          role="slider"
          style=""
          tabindex="0"
        />
      </span>
    </span>
  </div>
</body>
`;

exports[`Slider Component > renders with provided value 1`] = `
<body>
  <div>
    <span
      aria-disabled="false"
      class="relative flex w-full touch-none select-none items-center"
      data-orientation="horizontal"
      data-testid="slider-test"
      dir="ltr"
      style="--radix-slider-thumb-transform: translateX(-50%);"
    >
      <span
        class="relative h-1.5 w-full grow overflow-hidden rounded-full bg-primary/20"
        data-orientation="horizontal"
      >
        <span
          class="absolute h-full bg-primary"
          data-orientation="horizontal"
          style="left: 0%; right: 90.81632653061224%;"
        />
      </span>
      <span
        style="transform: var(--radix-slider-thumb-transform); position: absolute; left: calc(9.183673469387756% + 0px);"
      >
        <span
          aria-orientation="horizontal"
          aria-valuemax="99"
          aria-valuemin="1"
          aria-valuenow="10"
          class="block h-4 w-4 rounded-full border border-primary/50 bg-background shadow transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50"
          data-orientation="horizontal"
          data-radix-collection-item=""
          role="slider"
          style=""
          tabindex="0"
        />
      </span>
    </span>
  </div>
</body>
`;
